web/src/index.css
@import "tailwindcss" source(none);
@source "../src";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@import '@xterm/xterm/css/xterm.css';

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);

  --color-aether-accent: #000d88;
  --color-aether-soft: #F5E6DD;
  --color-aether-bg: #e8eaff;
  --color-aether-ink: #1C1714;
  --color-aether-terminal: #1F1A17;
  --color-aether-footer: #2A211C;
  --font-sans: ui-sans-serif, system-ui, -apple-system, "Inter", "Helvetica Neue", Arial, sans-serif;
}

:root {
  --radius: 0.625rem;
}

@layer base {
  body {
    font-family: var(--font-sans);
  }

  .xterm {
    height: 100% !important;
  }
  .xterm .xterm-viewport {
    overflow-y: scroll !important;
  }
  .xterm .xterm-screen {
    overflow: hidden !important;
  }
}

